Attempting to resolve some contrast errors

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -137,7 +137,6 @@ ul.navbar li {
 }
 
 .navbar a:hover {
-    background-color: var(--accent-hover);
     color: #fff;
 }
 
